<resources>
    <string name="app_name">InventoryApp2</string>
    <string name="unknown_author">Unknown author</string>
    <string name="unknown_title">Unknown title</string>

    <string name="sale">Sale</string>

    <string name="editor_activity_title_new_book">add new book</string>
    <string name="editor_activity_title_edit_book">edit book</string>

    <string name="book_overview">Overview</string>
    <string name="book_hint_name">Title</string>
    <string name="book_hint_author">Author</string>

    <string name="book_supplier">Supplier</string>
    <string name="book_supplier_phone">Supplier phone number</string>
    <string name="book_price">Price</string>
    <string name="book_quantity">Quantity</string>
    <string name="increase_value">increase</string>
    <string name="decrease_value">decrease</string>

    <string name="call_supplier">Call supplier</string>


    <string name="unit_price">$</string>

    <string name="editor_insert_book_failed">Error with book inserting.</string>
    <string name="editor_insert_book_successful">Book added.</string>

    <string name="editor_update_book_failed">Error with book update.</string>
    <string name="editor_update_book_successful">Book updated.</string>

    <string name="unsaved_changes_msg">Quit editing without saving?</string>
    <string name="quit">Quit</string>
    <string name="keep_editing">Edit</string>

    <string name="delete_msg">Do you want to delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_book_failed">Error with deleting book.</string>
    <string name="delete_book_successful">Book deleted.</string>
    <string name="call_error">Could not call the supplier, try manually.</string>
    <string name="required_fields_empty">Please, update empty fields</string>

    <string name="action_save">action_save</string>
    <string name="deleteBook">Delete Book</string>
    <string name="deleteAll">Delete all entries</string>
    <string name="insertDummy">Insert dummy data</string>
    <string name="packages">pcs.</string>
</resources>
